@@ -8,7 +8,10 @@
 - Added org.jasypt.util.password.ConfigurablePasswordEncryptor for a more
   configurable (yet easy) way of using a password encryptor.
 - Added binary utils for easy encryption of binaries.
-
+- Added number encryption functionalities (both for integer and decimal
+  numbers). This means new StandardPBEIntegerEncryptor (for BigIntegers) and 
+  StandardPBEDecimalEncryptor (for BigDecimals) in the org.jasypt.encryption.pbe
+  package.
 
 
 1.1
